@@ -19,7 +19,6 @@ import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -45,7 +44,7 @@ public class CabinetService {
     public List<CabinetResponse> findAll() {
         return cabinetRepository.findByActiveTrueAndBuildingActiveTrue().stream()
                 .map(cabinetMapper::entityToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
