@@ -15,7 +15,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -38,7 +37,7 @@ public class CathedraService {
         List<Cathedra> cathedras = cathedraRepository.findAllByActiveTrue();
         return cathedras.stream()
                 .map(cathedraMapper::entityToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
