@@ -13,7 +13,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -35,7 +34,7 @@ public class DisciplineService {
     public List<DisciplineResponse> findAll() {
         return disciplineRepository.findAllByActiveTrue().stream()
                 .map(disciplineMapper::entityToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public DisciplineResponse findByPublicId(String publicId) {
