@@ -13,7 +13,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,7 +26,7 @@ public class FacultyService {
         List<Faculty> faculties = facultyRepository.findAllByActiveTrue();
         return faculties.stream()
                 .map(facultyMapper::entityToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
