@@ -15,7 +15,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -81,6 +80,6 @@ public class StudentSubgroupService {
         List<StudentSubgroup> studentSubgroups = studentSubgroupRepository.findAllByStudentGroupAndActiveTrue(studentGroup);
         return studentSubgroups.stream()
                 .map(StudentSubgroupMapper.INSTANCE::entityToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
